--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -174,8 +174,8 @@
 
             document.getElementById('modalContent').innerHTML = `
             <h5 class="modal-title">${placeName}</h5>
-            <p>Category: ${categoryName}</p>
-            <p>City: ${cname}</p>
+            <p>카테고리: ${categoryName}</p>
+            <p>도시: ${cname}</p>
             <a href="https://map.kakao.com/?itemId=${apiId}" target="_blank" class="btn btn-primary">자세히 보기</a>
         `;
 
