--- a/src/main/resources/templates/blog/modify.html
+++ b/src/main/resources/templates/blog/modify.html
@@ -82,29 +82,36 @@
 
                     <div class="col">
 
-                        <div id="skyIconToday" class="card weather-card text-center " style="border-radius: 12px; width: 100%; height: 150px; z-index: 10">
+                        <div id="skyIconToday" class="card weather-card text-center " style="width: 100%; height: 130px;">
                             <div class="card-body p-1">
-                                <img id="ptyIconToday" src="" class="img-fluid" style="width: 40px; display: block; margin: 0 auto;" />
-                                <h6 class="card-title" style="font-size: 0.85rem; margin: 0; padding: 0;">오늘의 날씨</h6>
-                                <p style="font-size: 0.75rem; margin: 0; padding: 0;">현재기온: <span id="todayTMP"></span>°C</p>
-                                <p style="font-size: 0.75rem; margin: 0; padding: 0;">최고기온: <span id="todayTMX"></span>°C</p>
-                                <p style="font-size: 0.75rem; margin: 0; padding: 0;">최저기온: <span id="todayTMN"></span>°C</p>
+                                <div>
+                                    <h6 class="card-title" style="font-weight: bolder;font-size: 0.85rem; margin: 0; padding: 0; text-shadow: -1px -1px white, 1px 1px white;">To Day</h6>
+                                    <img id="ptyIconToday" src="" class="img-fluid" style="width: 75px; display: block; margin: 0 auto;" />
+                                </div>
+                                <p style="font-weight: bold;font-size: 1rem; margin: 0; padding: 0;font-color:black; text-shadow: -1px -1px white, 1px 1px white;">현재: <span id="todayTMP"></span>°C</p>
+                                <div class="d-flex justify-content-between">
+                                    <p style="font-size: 0.85rem; margin: 0; padding: 0; text-shadow: -1px -1px white, 1px 1px white;">최저: <span id="todayTMN"></span>°C</p>
+                                    <p style="font-size: 0.85rem; margin: 0; padding: 0; text-shadow: -1px -1px white, 1px 1px white;">최고: <span id="todayTMX"></span>°C</p>
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
                     <div class="col">
                         <!-- 내일의 날씨 카드 -->
-                        <div id="skyIconTomorrow" class="card weather-card text-center col" style="border-radius: 12px; width: 100%; height: 150px;">
+                        <div id="skyIconTomorrow" class="card weather-card text-center col" style="width: 100%; height: 130px;">
                             <div class="card-body p-1">
-                                <img id="ptyIconTomorrow" src="" class="img-fluid" style="width: 40px; display: block; margin: 0 auto;" />
-                                <h6 class="card-title" style="font-size: 0.85rem; margin: 0; padding: 0;">내일의 날씨</h6>
-                                <p style="font-size: 0.75rem; margin: 0; padding: 0;">최고기온: <span id="tomorrowTMX"></span>°C</p>
-                                <p style="font-size: 0.75rem; margin: 0; padding: 0;">최저기온: <span id="tomorrowTMN"></span>°C</p>
+                                <h6 class="card-title" style="font-weight: bolder;font-size: 0.85rem; margin: 0; padding: 0; text-shadow: -1px -1px white, 1px 1px white;">내일의 날씨</h6>
+                                <img id="ptyIconTomorrow" src="" class="img-fluid" style="width: 75px; display: block; margin: 0 auto;" />
+                                <div class="d-flex justify-content-between">
+                                    <p style="font-size: 0.85rem; margin: 0; padding: 0; text-shadow: -1px -1px white, 1px 1px white; margin-top: 10%">최고: <span id="tomorrowTMX"></span>°C</p>
+                                    <p style="font-size: 0.85rem; margin: 0; padding: 0; text-shadow: -1px -1px white, 1px 1px white; margin-top: 10%">최저: <span id="tomorrowTMN"></span>°C</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
             <!-- 추가 날씨 카드 5장 -->
             <div class="d-flex justify-content-between gap-1 mt-3">
