--- a/src/main/resources/templates/notice/list.html
+++ b/src/main/resources/templates/notice/list.html
@@ -600,23 +600,23 @@
                 let moveLatLon;
 
                 switch (selectMap) {
-                    case 'city1': moveLatLon = new kakao.maps.LatLng(37.5665, 126.9780); break;
-                    case 'city2': moveLatLon = new kakao.maps.LatLng(35.1796, 129.0756); break;
-                    case 'city3': moveLatLon = new kakao.maps.LatLng(35.8722, 128.6017); break;
-                    case 'city4': moveLatLon = new kakao.maps.LatLng(37.4563, 126.7052); break;
-                    case 'city5': moveLatLon = new kakao.maps.LatLng(35.1595, 126.8526); break;
-                    case 'city6': moveLatLon = new kakao.maps.LatLng(36.3504, 127.3845); break;
-                    case 'city7': moveLatLon = new kakao.maps.LatLng(35.5384, 129.3114); break;
-                    case 'city8': moveLatLon = new kakao.maps.LatLng(36.4800, 127.2890); break;
-                    case 'city9': moveLatLon = new kakao.maps.LatLng(37.8813, 127.7298); break;
-                    case 'city10': moveLatLon = new kakao.maps.LatLng(37.7519, 128.8761); break;
-                    case 'city11': moveLatLon = new kakao.maps.LatLng(36.6424, 127.4890); break;
-                    case 'city12': moveLatLon = new kakao.maps.LatLng(36.6013, 126.6608); break;
-                    case 'city13': moveLatLon = new kakao.maps.LatLng(35.8242, 127.1479); break;
-                    case 'city14': moveLatLon = new kakao.maps.LatLng(34.8118, 126.3922); break;
-                    case 'city15': moveLatLon = new kakao.maps.LatLng(36.5684, 128.7294); break;
-                    case 'city16': moveLatLon = new kakao.maps.LatLng(35.2276, 128.6811); break;
-                    case 'city17': moveLatLon = new kakao.maps.LatLng(33.4996, 126.5312); break;
+                    case '1': moveLatLon = new kakao.maps.LatLng(37.5665, 126.9780); break;
+                    case '2': moveLatLon = new kakao.maps.LatLng(35.1796, 129.0756); break;
+                    case '3': moveLatLon = new kakao.maps.LatLng(35.8722, 128.6017); break;
+                    case '4': moveLatLon = new kakao.maps.LatLng(37.4563, 126.7052); break;
+                    case '5': moveLatLon = new kakao.maps.LatLng(35.1595, 126.8526); break;
+                    case '6': moveLatLon = new kakao.maps.LatLng(36.3504, 127.3845); break;
+                    case '7': moveLatLon = new kakao.maps.LatLng(35.5384, 129.3114); break;
+                    case '8': moveLatLon = new kakao.maps.LatLng(36.4800, 127.2890); break;
+                    case '9': moveLatLon = new kakao.maps.LatLng(37.8813, 127.7298); break;
+                    case '10': moveLatLon = new kakao.maps.LatLng(37.7519, 128.8761); break;
+                    case '11': moveLatLon = new kakao.maps.LatLng(36.6424, 127.4890); break;
+                    case '12': moveLatLon = new kakao.maps.LatLng(36.6013, 126.6608); break;
+                    case '13': moveLatLon = new kakao.maps.LatLng(35.8242, 127.1479); break;
+                    case '14': moveLatLon = new kakao.maps.LatLng(34.8118, 126.3922); break;
+                    case '15': moveLatLon = new kakao.maps.LatLng(36.5684, 128.7294); break;
+                    case '16': moveLatLon = new kakao.maps.LatLng(35.2276, 128.6811); break;
+                    case '17': moveLatLon = new kakao.maps.LatLng(33.4996, 126.5312); break;
                     default: moveLatLon = new kakao.maps.LatLng(37.566826, 126.9786567); break;
                 }
                 map.setCenter(moveLatLon); // 좌표로 지도 중심 이동
@@ -696,23 +696,23 @@
             $('.weathershortins').html('');
             $('.weatherins').html('');
             switch (selectCity) {
-                case 'city1': regID = '11B00000'; regIDT = '11B10101'; nx = 60; ny = 127; break;
-                case 'city2': regID = '11H20000'; regIDT = '11H20101'; nx = 98; ny = 76; break;
-                case 'city3': regID = '11H10000'; regIDT = '11H10701'; nx = 89; ny = 90; break;
-                case 'city4': regID = '11D10000'; regIDT = '11B20201'; nx = 55; ny = 124; break;
-                case 'city5': regID = '11F20000'; regIDT = '11F20501'; nx = 58; ny = 74; break;
-                case 'city6': regID = '11C20000'; regIDT = '11C20401'; nx = 67; ny = 100; break;
-                case 'city7': regID = '11H20000'; regIDT = '11H20101'; nx = 102; ny = 84; break;
-                case 'city8': regID = '11C20000'; regIDT = '11C20404'; nx = 66; ny = 103; break;
-                case 'city9': regID = '11B00000'; regIDT = '11B20601'; nx = 60; ny = 121; break;
-                case 'city10': regID = '11D10000'; regIDT = '11D10301'; nx = 73; ny = 134; break;
-                case 'city11': regID = '11C10000'; regIDT = '11C10301'; nx = 69; ny = 107; break;
-                case 'city12': regID = '11C10000'; regIDT = '11C20101'; nx = 51; ny = 96; break;
-                case 'city13': regID = '11F10000'; regIDT = '11F10201'; nx = 63; ny = 89; break;
-                case 'city14': regID = '11F20000'; regIDT = '11F20501'; nx = 50; ny = 67; break;
-                case 'city15': regID = '11H10000'; regIDT = '11H10701'; nx = 91; ny = 106; break;
-                case 'city16': regID = '11H20000'; regIDT = '11H20301'; nx = 89; ny = 77; break;
-                case 'city17': regID = '11G00000'; regIDT = '11G00201'; nx = 52; ny = 38; break;
+                case '1': regID = '11B00000'; regIDT = '11B10101'; nx = 60; ny = 127; break;
+                case '2': regID = '11H20000'; regIDT = '11H20101'; nx = 98; ny = 76; break;
+                case '3': regID = '11H10000'; regIDT = '11H10701'; nx = 89; ny = 90; break;
+                case '4': regID = '11D10000'; regIDT = '11B20201'; nx = 55; ny = 124; break;
+                case '5': regID = '11F20000'; regIDT = '11F20501'; nx = 58; ny = 74; break;
+                case '6': regID = '11C20000'; regIDT = '11C20401'; nx = 67; ny = 100; break;
+                case '7': regID = '11H20000'; regIDT = '11H20101'; nx = 102; ny = 84; break;
+                case '8': regID = '11C20000'; regIDT = '11C20404'; nx = 66; ny = 103; break;
+                case '9': regID = '11B00000'; regIDT = '11B20601'; nx = 60; ny = 121; break;
+                case '10': regID = '11D10000'; regIDT = '11D10301'; nx = 73; ny = 134; break;
+                case '11': regID = '11C10000'; regIDT = '11C10301'; nx = 69; ny = 107; break;
+                case '12': regID = '11C10000'; regIDT = '11C20101'; nx = 51; ny = 96; break;
+                case '13': regID = '11F10000'; regIDT = '11F10201'; nx = 63; ny = 89; break;
+                case '14': regID = '11F20000'; regIDT = '11F20501'; nx = 50; ny = 67; break;
+                case '15': regID = '11H10000'; regIDT = '11H10701'; nx = 91; ny = 106; break;
+                case '16': regID = '11H20000'; regIDT = '11H20301'; nx = 89; ny = 77; break;
+                case '17': regID = '11G00000'; regIDT = '11G00201'; nx = 52; ny = 38; break;
                 default: regID = '11B00000'; regIDT = '11B10101'; nx = 60; ny = 127; break;
             }
             // 기존 날씨 정보를 비웁니다.
