--- a/src/main/resources/templates/notice/modify.html
+++ b/src/main/resources/templates/notice/modify.html
@@ -52,29 +52,36 @@
 
                     <div class="col">
 
-                        <div id="skyIconToday" class="card weather-card text-center " style="border-radius: 12px; width: 100%; height: 150px; z-index: 10">
+                        <div id="skyIconToday" class="card weather-card text-center " style="width: 100%; height: 130px;">
                             <div class="card-body p-1">
-                                <img id="ptyIconToday" src="" class="img-fluid" style="width: 40px; display: block; margin: 0 auto;" />
-                                <h6 class="card-title" style="font-size: 0.85rem; margin: 0; padding: 0;">오늘의 날씨</h6>
-                                <p style="font-size: 0.75rem; margin: 0; padding: 0;">현재기온: <span id="todayTMP"></span>°C</p>
-                                <p style="font-size: 0.75rem; margin: 0; padding: 0;">최고기온: <span id="todayTMX"></span>°C</p>
-                                <p style="font-size: 0.75rem; margin: 0; padding: 0;">최저기온: <span id="todayTMN"></span>°C</p>
+                                <div>
+                                    <h6 class="card-title" style="font-weight: bolder;font-size: 0.85rem; margin: 0; padding: 0; text-shadow: -1px -1px white, 1px 1px white;">To Day</h6>
+                                    <img id="ptyIconToday" src="" class="img-fluid" style="width: 75px; display: block; margin: 0 auto;" />
+                                </div>
+                                <p style="font-weight: bold;font-size: 1rem; margin: 0; padding: 0;font-color:black; text-shadow: -1px -1px white, 1px 1px white;">현재: <span id="todayTMP"></span>°C</p>
+                                <div class="d-flex justify-content-between">
+                                    <p style="font-size: 0.85rem; margin: 0; padding: 0; text-shadow: -1px -1px white, 1px 1px white;">최저: <span id="todayTMN"></span>°C</p>
+                                    <p style="font-size: 0.85rem; margin: 0; padding: 0; text-shadow: -1px -1px white, 1px 1px white;">최고: <span id="todayTMX"></span>°C</p>
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
                     <div class="col">
                         <!-- 내일의 날씨 카드 -->
-                        <div id="skyIconTomorrow" class="card weather-card text-center col" style="border-radius: 12px; width: 100%; height: 150px;">
+                        <div id="skyIconTomorrow" class="card weather-card text-center col" style="width: 100%; height: 130px;">
                             <div class="card-body p-1">
-                                <img id="ptyIconTomorrow" src="" class="img-fluid" style="width: 40px; display: block; margin: 0 auto;" />
-                                <h6 class="card-title" style="font-size: 0.85rem; margin: 0; padding: 0;">내일의 날씨</h6>
-                                <p style="font-size: 0.75rem; margin: 0; padding: 0;">최고기온: <span id="tomorrowTMX"></span>°C</p>
-                                <p style="font-size: 0.75rem; margin: 0; padding: 0;">최저기온: <span id="tomorrowTMN"></span>°C</p>
+                                <h6 class="card-title" style="font-weight: bolder;font-size: 0.85rem; margin: 0; padding: 0; text-shadow: -1px -1px white, 1px 1px white;">내일의 날씨</h6>
+                                <img id="ptyIconTomorrow" src="" class="img-fluid" style="width: 75px; display: block; margin: 0 auto;" />
+                                <div class="d-flex justify-content-between">
+                                    <p style="font-size: 0.85rem; margin: 0; padding: 0; text-shadow: -1px -1px white, 1px 1px white; margin-top: 10%">최고: <span id="tomorrowTMX"></span>°C</p>
+                                    <p style="font-size: 0.85rem; margin: 0; padding: 0; text-shadow: -1px -1px white, 1px 1px white; margin-top: 10%">최저: <span id="tomorrowTMN"></span>°C</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
             <!-- 추가 날씨 카드 5장 -->
             <div class="d-flex justify-content-between gap-1 mt-3">
@@ -399,23 +406,23 @@
                 let moveLatLon;
 
                 switch (selectMap) {
-                    case 'city1': moveLatLon = new kakao.maps.LatLng(37.5665, 126.9780); break;
-                    case 'city2': moveLatLon = new kakao.maps.LatLng(35.1796, 129.0756); break;
-                    case 'city3': moveLatLon = new kakao.maps.LatLng(35.8722, 128.6017); break;
-                    case 'city4': moveLatLon = new kakao.maps.LatLng(37.4563, 126.7052); break;
-                    case 'city5': moveLatLon = new kakao.maps.LatLng(35.1595, 126.8526); break;
-                    case 'city6': moveLatLon = new kakao.maps.LatLng(36.3504, 127.3845); break;
-                    case 'city7': moveLatLon = new kakao.maps.LatLng(35.5384, 129.3114); break;
-                    case 'city8': moveLatLon = new kakao.maps.LatLng(36.4800, 127.2890); break;
-                    case 'city9': moveLatLon = new kakao.maps.LatLng(37.8813, 127.7298); break;
-                    case 'city10': moveLatLon = new kakao.maps.LatLng(37.7519, 128.8761); break;
-                    case 'city11': moveLatLon = new kakao.maps.LatLng(36.6424, 127.4890); break;
-                    case 'city12': moveLatLon = new kakao.maps.LatLng(36.6013, 126.6608); break;
-                    case 'city13': moveLatLon = new kakao.maps.LatLng(35.8242, 127.1479); break;
-                    case 'city14': moveLatLon = new kakao.maps.LatLng(34.8118, 126.3922); break;
-                    case 'city15': moveLatLon = new kakao.maps.LatLng(36.5684, 128.7294); break;
-                    case 'city16': moveLatLon = new kakao.maps.LatLng(35.2276, 128.6811); break;
-                    case 'city17': moveLatLon = new kakao.maps.LatLng(33.4996, 126.5312); break;
+                    case '1': moveLatLon = new kakao.maps.LatLng(37.5665, 126.9780); break;
+                    case '2': moveLatLon = new kakao.maps.LatLng(35.1796, 129.0756); break;
+                    case '3': moveLatLon = new kakao.maps.LatLng(35.8722, 128.6017); break;
+                    case '4': moveLatLon = new kakao.maps.LatLng(37.4563, 126.7052); break;
+                    case '5': moveLatLon = new kakao.maps.LatLng(35.1595, 126.8526); break;
+                    case '6': moveLatLon = new kakao.maps.LatLng(36.3504, 127.3845); break;
+                    case '7': moveLatLon = new kakao.maps.LatLng(35.5384, 129.3114); break;
+                    case '8': moveLatLon = new kakao.maps.LatLng(36.4800, 127.2890); break;
+                    case '9': moveLatLon = new kakao.maps.LatLng(37.8813, 127.7298); break;
+                    case '10': moveLatLon = new kakao.maps.LatLng(37.7519, 128.8761); break;
+                    case '11': moveLatLon = new kakao.maps.LatLng(36.6424, 127.4890); break;
+                    case '12': moveLatLon = new kakao.maps.LatLng(36.6013, 126.6608); break;
+                    case '13': moveLatLon = new kakao.maps.LatLng(35.8242, 127.1479); break;
+                    case '14': moveLatLon = new kakao.maps.LatLng(34.8118, 126.3922); break;
+                    case '15': moveLatLon = new kakao.maps.LatLng(36.5684, 128.7294); break;
+                    case '16': moveLatLon = new kakao.maps.LatLng(35.2276, 128.6811); break;
+                    case '17': moveLatLon = new kakao.maps.LatLng(33.4996, 126.5312); break;
                     default: moveLatLon = new kakao.maps.LatLng(37.566826, 126.9786567); break;
                 }
                 map.setCenter(moveLatLon); // 좌표로 지도 중심 이동
